# Breathe-ESG

./: .gitignore  .replit  DECISIONS.md  MODEL.md  README.md  SOURCES.md  TRADEOFFS.md  netlify.toml  pnpm-lock.yaml  pyproject.toml  render.yaml  replit.md
.agents/memory/: MEMORY.md  date-serialization.md  django-migration.md
artifacts/api-server/: manage.py  package.json  requirements.txt
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/api/: admin.py  models.py  serializers.py  urls.py
artifacts/api-server/api/management/commands/: ensure_esg_schema.py  seed_demo_data.py  (+1 more)
artifacts/api-server/api/views/: auth.py  batches.py  clients.py  dashboard.py  health.py  ingest.py  records.py
artifacts/api-server/breathe_backend/: settings.py  urls.py  wsgi.py
artifacts/api-server/src/routes/: batches.ts  clients.ts  dashboard.ts  index.ts  ingest.ts  records.ts
artifacts/esg-dashboard/: index.html  package.json  vite.config.ts
artifacts/esg-dashboard/.replit-artifact/: artifact.toml
artifacts/esg-dashboard/src/: App.tsx  index.css  main.tsx
artifacts/esg-dashboard/src/components/: layout.tsx
artifacts/esg-dashboard/src/lib/: auth.tsx
artifacts/esg-dashboard/src/pages/: batches.tsx  clients.tsx  dashboard.tsx  ingest.tsx  login.tsx  records.tsx
artifacts/mockup-sandbox/: vite.config.ts
attached_assets/: Pasted-Tech-Intern-Assignment-Breathe-ESG-Context-Breathe-ESG-_1779788729358.txt
lib/api-spec/: openapi.yaml
lib/db/src/schema/: audit-logs.ts  clients.ts  emissions-records.ts  index.ts  ingestion-batches.ts
