[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django==5.0.6",
    "django-cors-headers==4.4.0",
    "djangorestframework==3.15.2",
    "djangorestframework-camel-case==1.4.2",
    "djangorestframework-simplejwt==5.3.1",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.1",
]
